# mlops-presentation

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  entrypoint.sh  health_check-deployment.yaml  local-cluster.yaml  pyproject.toml  requirements.txt
gitops/cluster/: Chart.yaml  values.yaml
gitops/cluster/templates/: airflow.yaml  minio-operator.yaml  minio-tenant.yaml  traefik-ingress-controller.yaml
gitops/workloads/airflow/: kustomization.yaml
gitops/workloads/minio-operator/: kustomization.yaml
iac/: .terraform.lock.hcl  argocd.tf  authentications.tf  output.tf  outputs.tf  providers.tf  values-app.yaml  values.yaml  variables.tf
mlflow/: Dockerfile  entrypoint.sh
pg/: pg-init.sh
prefect/: Dockerfile  health_check-deployment.yaml
prefect/flows/: healthcheck.py  hello.py
src/mlops_presentation/: __init__.py
