[tool.poetry]
name = "mlops-presentation"
version = "0.1.0"
description = ""
authors = ["Blizter <Blizert47@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.0.0"
flake8-pyproject = "^1.2.3"
pre-commit = "^3.7.1"

[tool.black]
line-length = 130
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | compliance_frameworks
)/
'''

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 130
count = true
exclude = 'compliance_frameworks/,.git,.venv,.pytest_cache'
ignore = ['E231', 'E241', 'E203', "E266", "E501", 'W503', 'F403', 'F401']
per-file-ignores = ['__init__.py:F401']

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
